# PassGen

./: LICENSE  README.md  diceware_generator.py  gui.py  main.py  pyproject.toml  username_generator.py  utils.py  wordlist_loader.py
assets/icons/: icon.icns
src/passgen/: diceware_generator.py  main.py  username_generator.py  wordlist_loader.py
src/passgengui/: diceware_generator.py  gui.py  wordlist_loader.py
