[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "passgen-gui"
version = "0.1.0"
description = "PassGen GUI - a Diceware-based credential generator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Gabriel Marrone", email = "therealfeelz69@gmail.com" }
]

dependencies = [
    "customtkinter",
    "pillow",
    "pyperclip"
]

[project.scripts]
passgen-gui = "passgengui.gui:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
